[package]
name = "modcon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rodio = "0.20.1"
tokio = { version = "1.41.1", features = ["full"] }
